# ImHex-Meshoptimizer

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/conan/profiles/: win-mingw-release  win-mingw-release-build
.github/workflows/: build.yml
source/: meshoptimizer.cpp
